--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -5,6 +5,8 @@ ENV PYTHONUNBUFFERED=1
 RUN mkdir -p /opt/bbot
 
 COPY ./* /opt/bbot/
+COPY ./staic /opt/bbot/static
+COPY ./templates /opt/bbot/templates
 WORKDIR /opt/bbot
 
 RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install --upgrade pip
