--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -5,8 +5,9 @@ ENV PYTHONUNBUFFERED=1
 RUN mkdir -p /opt/bbot
 
 COPY ./* /opt/bbot/
-COPY ./staic /opt/bbot/static
-COPY ./templates /opt/bbot/templates
+COPY ./static/* /opt/bbot/static/
+COPY ./templates/* /opt/bbot/templates/
+COPY ./config_compose.json /opt/bbot/config.json
 WORKDIR /opt/bbot
 
 RUN pip3 --trusted-host pypi.org --trusted-host files.pythonhosted.org install --upgrade pip
